[package]
name = "kiyo"
version = "0.0.5"
edition = "2021"
authors = ["Angelo Carly <angelo.carly@protonmail.com"]
description = "Lightweight compute shader playground"
readme = "README.md"
repository = "https://github.com/angelocarly/kiyo"
license = "GPL-3.0-only"
keywords = ["compute", "vulkan", "render", "engine", "art"]
categories = ["rendering::engine"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
cen = { git = "https://github.com/angelocarly/cen.git", rev = "7a23c202d4663f5d641200aaae978faafd3a4da7" }
cpal = "0.13.4"
glam = "0.28.0"
log = "0.4.22"
bytemuck = { version = "1.17.0", features = ["derive"] }
slotmap = "1.0.7"

[dev-dependencies]

[[example]]
name = "simple-render"

[[example]]
name = "blur-pass"

[[example]]
name = "with-audio"

[[example]]
name = "clear"

[[example]]
name = "feedback"
