[package]
name = "kiyo"
version = "0.0.5"
edition = "2021"
authors = ["Angelo Carly <angelo.carly@protonmail.com"]
description = "Lightweight compute shader playground"
readme = "README.md"
repository = "https://github.com/angelocarly/kiyo"
license = "GPL-3.0-only"
keywords = ["compute", "vulkan", "render", "engine", "art"]
categories = ["rendering::engine"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
cen = { git = "https://github.com/angelocarly/cen.git", rev = "e4f6be82d718c1838f8f2926ccc52bbc936e57a2" }
cpal = "0.13.4"
glam = "0.28.0"
log = "0.4.22"
bytemuck = { version = "1.17.0", features = ["derive"] }
slotmap = "1.0.7"
rodio = "0.20.1"

[dev-dependencies]

[[example]]
name = "simple-render"

[[example]]
name = "blur-pass"

[[example]]
name = "with-audio"

[[example]]
name = "clear"

[[example]]
name = "feedback"
